--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,34 +406,34 @@ csmall2 {
 }
 
 /* Blog Page */
-.popular-posts {
+.widget .popular-posts {
 	margin: 0px;
 	padding-left: 0px;
 	}
 
-.popular-posts li {
+.widget .popular-posts li {
 	list-style: none;
 	margin-bottom: 20px;
 	min-height: 70px;
 }
-.popular-posts li a,
-.popular-posts li a:hover {
+.widget .popular-posts li a,
+.widget .popular-posts li a:hover {
 	color:#2f2f2f;
 	text-decoration: none;
 	}
 
-.popular-posts li img {
+.widget .popular-posts li img {
 	float: left;
 	margin-right: 20px;
 	}
 
-.popular-posts li em {
+.widget .popular-posts li em {
 	font-family: 'Lato', sans-serif;
 	font-size: 12px;
 	color: #b3b3b3
 	}
 
-.popular-posts p {
+.widget .popular-posts p {
 	line-height: normal;
 	margin-bottom: auto;
 }
